# challenge-predictive-maintenance

./: .gitignore  1. Challenge.ipynb  2. Challenge.ipynb  Makefile  README.md  challenge.ipynb  consts.py  hello.py  pyproject.toml  temp.py  temp_eda.py
scripts/: lint.sh  up.sh
src/: __init__.py  data.py  data_utils.py  eda_utils.py  features.py
src/data/: __init__.py  data_spliter.py  data_utils.py
src/models/: dataloader.py  datasets.py  lstm.py  metric_visualizer.py  trainer.py  utils.py
src/models/architectures/: __init__.py  lstm_architecture.py
src/transformations/: features.py
tests/: __init__.py  test_data.py  test_data_spliter.py  test_features.py
